:showtitle:
:toc: left
:icons: font
:toclevels: 1

= Steno Changelog

// WARNING: This file is modified programmatically by `cargo release` as
// configured in release.toml.  DO NOT change the format of the headers or the
// list of raw commits.

// cargo-release: next header goes here (do not change this line)

== Unreleased changes (release date TBD)

https://github.com/oxidecomputer/steno/compare/v0.3.0\...HEAD[Full list of commits]

== 0.3.0 (released 2022-11-02)

https://github.com/oxidecomputer/steno/compare/v0.2.0\...v0.3.0[Full list of commits]

* https://github.com/oxidecomputer/steno/pull/40[#40] Add `Dag::builder` method
* https://github.com/oxidecomputer/steno/pull/67[#67] Add methods for inspecting Saga DAG / https://github.com/oxidecomputer/steno/pull/73[#73] A minor extention to #67, expose indices

=== Breaking Changes

None.

== 0.2.0 (released 2022-08-05)

Changes not documented.