@@ -15,6 +15,8 @@
 
 https://github.com/oxidecomputer/steno/compare/v0.3.0\...HEAD[Full list of commits]
 
+* https://github.com/oxidecomputer/steno/pull/88[#88] Add `SecClient::saga_inject_repeat` method to help with testing idempotency
+
 == 0.3.0 (released 2022-11-02)
 
 https://github.com/oxidecomputer/steno/compare/v0.2.0\...v0.3.0[Full list of commits]
